--- a/src/Pages/Favorites.css
+++ b/src/Pages/Favorites.css
@@ -1,9 +1,9 @@
 .cards-container {
-  min-width: 90%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
+  /* min-width: 90%; */
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* flex-direction: column; */
   /* justify-content: space-around; */
-  height: 400px;
+  height: 500px;
   overflow-y: scroll;
 }
