--- a/src/Pages/Details.css
+++ b/src/Pages/Details.css
@@ -1,5 +1,10 @@
 img {
-  height: 420px
+  height: 420px;
+  /* width: 200px; */
+}
+
+li {
+  list-style: none;
 }
 
 .details-container {
@@ -8,14 +13,15 @@ img {
   min-width: 60%;
   display: flex;
   justify-content: space-between;
-  background-color: #010c3f;
+  /* background-color: #010c3f; */
+  background-color: rgba(1, 12, 63, .7);
   box-shadow: 0 2.2px 1.2px 0 #000;
   border-radius: 0 15px 15px 0;
 }
 
 .details-container h2 {
   padding-left: .9rem;
-  max-width: 90%;
+  /* max-width: 90%; */
   font-size: 2.8rem;
   text-align: left;
 }
