--- a/src/Components/FavoriteCard/FavoriteCard.css
+++ b/src/Components/FavoriteCard/FavoriteCard.css
@@ -14,6 +14,11 @@
   box-shadow: 0 2.2px 1.2px 0 #000;
   border-radius: 0 15px 15px 0;
 }
+/* 
+h2 {
+  font-size: 2.8rem;
+  margin: 0;
+} */
 
 .details-container-small h2 {
   padding-left: .9rem;
