--- a/src/Components/FavoriteCard/FavoriteCard.css
+++ b/src/Components/FavoriteCard/FavoriteCard.css
@@ -1,33 +1,36 @@
 .image-small {
   height: 200px;
+  width: 200px;
+}
+
+.details-container-small ul {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 .75rem 1rem;
 }
 
 .details-container-small {
   margin: .8rem 3.8rem;
-  width: 35%;
-  min-width: 30%;
+  max-width: 35%;
   max-height: 200px;
   display: flex;
-  justify-content: space-between;
-  /* background-color: #010c3f; */
   background-color: rgba(1, 12, 63, .7);
   box-shadow: 0 2.2px 1.2px 0 #000;
   border-radius: 0 15px 15px 0;
 }
-/* 
-h2 {
-  font-size: 2.8rem;
-  margin: 0;
-} */
 
 .details-container-small h2 {
-  padding-left: .9rem;
-  max-width: 90%;
+  margin: 0.8rem 0 0 .9rem;
+  max-width: 15rem;
+  max-height: 6rem;
+  overflow: hidden;
   font-size: 1.8rem;
   text-align: left;
 }
 
 .details-info-small {
+  min-width: 250px;
+  max-width: 250px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -36,6 +39,13 @@ h2 {
 .details-action-small {
   cursor: pointer;
   font-size: 1.6rem;
-  padding: .3rem .9rem;
+  padding: .2rem .4rem;
   height: 60px;
+}
+
+.details-and-toggle {
+  min-width: 300px;
+  max-width: 300px;
+  display: flex;
+  justify-content: space-between;
 }
