--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -1,11 +1,11 @@
-.SearchBar {
+.search-bar {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2.5rem 0;
 }
 
-.SearchBar input {
+.search-bar input {
   width: 287px;
   padding: .88rem 0;
   border: 1px solid #fff;
@@ -16,11 +16,11 @@
   font-size: 1rem;
 }
 
-.SearchBar input:focus {
+.search-bar input:focus {
   outline: none;
 }
 
-.SearchBar a {
+.search-bar a {
   cursor: pointer;
   width: 8.11rem;
   padding: .77rem 0;
@@ -28,9 +28,10 @@
   background-color: #010c3f;
   text-align: center;
   font-size: .833rem;
+  font-weight: 600;
   transition: background-color .25s;
 }
 
-.SearchBar a:hover {
+.search-bar a:hover {
   background-color: rgba(108, 65, 233, .7);
 }
