--- a/src/Pages/Details.css
+++ b/src/Pages/Details.css
@@ -1,10 +1,6 @@
 img {
   height: 420px;
-  /* width: 200px; */
-}
-
-li {
-  list-style: none;
+  max-width: 440px;
 }
 
 .details-container {
@@ -12,16 +8,22 @@ li {
   width: 60%;
   min-width: 60%;
   display: flex;
-  justify-content: space-between;
-  /* background-color: #010c3f; */
   background-color: rgba(1, 12, 63, .7);
   box-shadow: 0 2.2px 1.2px 0 #000;
   border-radius: 0 15px 15px 0;
 }
 
+.details-container ul {
+  list-style: none;
+  max-height: 11.5rem;
+  overflow-y: scroll;
+}
+
 .details-container h2 {
-  padding-left: .9rem;
-  /* max-width: 90%; */
+  margin: 1.5rem 1rem 0 1.9rem;
+  max-width: 19.2rem;
+  max-height: 6rem;
+  overflow: hidden;
   font-size: 2.8rem;
   text-align: left;
 }
@@ -33,8 +35,9 @@ li {
 }
 
 .details-action {
+  position: absolute;
+  left: 57.175rem;
   cursor: pointer;
   font-size: 2.2rem;
-  padding: .3rem .9rem;
-  height: 60px;
+  padding: .2rem .8rem;
 }
