--- a/src/Components/HistoryCard/HistoryCard.css
+++ b/src/Components/HistoryCard/HistoryCard.css
@@ -1,28 +1,27 @@
-.Track {
+.history-item {
   display: flex;
   align-items: center;
   margin: 20px;
-
-  width: 90%;
-  height: 55px;
+  max-height: 35px;
   padding: .88rem .55rem;
+  /* margin-left: 15rem; */
   background-color: rgba(1, 12, 63, .7);
   box-shadow: 0 2.2px 1.2px 1.2px #000;
   border-radius: 0 55px 55px 0;
 }
 
-.Track-action {
+.history-item-action {
   cursor: pointer;
   padding: 1.6rem;
-  font-size: .9rem;
+  font-size: .8rem;
   transition: color .25s;
 }
 
-.Track-action:hover {
+.history-item-action:hover {
   color: rgba(265, 265, 265, .5);
 }
 
-.Track-information {
+.history-item-information {
   flex-grow: 1;
   display: flex;
   flex-direction: row;
@@ -30,24 +29,34 @@
   align-items: center;
 }
 
-.Track-information img {
+.note-container {
+  max-width: 80px;
+  min-width: 80px;
+}
+
+.history-notes-double {
+  font-size: 2rem;
+}
+
+.history-notes {
+  font-size: 3rem;
   width: 64px;
   height: 64px;
-  margin-right: 20px;
+  margin-left: .8rem;
 }
 
-.Track-data {
+.history-item-data {
   display: block;
-  width: 75%;
+  max-width: 13.8rem;
 }
 
-.Track-data h3 {
+.history-item-data h3 {
   margin: .4rem 0;
   max-height: 1.35rem;
   overflow: hidden;
 }
 
-.Track-data p {
+.history-item-data p {
   margin-block-start: 0;
   margin-block-end: 0;
   font-size: .82rem;
@@ -57,8 +66,6 @@
   overflow: hidden;
 }
 
-.Track-information audio {
-  margin-left: 1rem;
-  display: block;
-  clear: left;
+span {
+  color: #6c41ec;
 }
