--- a/src/Components/TrackList/TrackList.css
+++ b/src/Components/TrackList/TrackList.css
@@ -1,3 +1,11 @@
 .TrackList {
-  width: 100%;
+  width: 90%;
+  height: 500px;
+  overflow-y: scroll;
+  padding: 0 10%;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
