--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -3,6 +3,13 @@ html,
 #root {
   font-size: 18px;
   height: 100%;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
 }
 
 h2 {
@@ -15,10 +22,6 @@ h2 {
   margin-right: 2rem;
 }
 
-.displayCurrentUser:hover {
-  cursor: pointer;
-}
-
 .navigation-text-link {
   text-decoration: none;
   font-family: 'Poppins', sans-serif;
@@ -27,10 +30,6 @@ h2 {
   margin-right: 1.8rem;
   margin-top: 1.2rem;
   display: inline-block;
-}
-
-.navigation-text-link:hover {
-  color: #6c41ec;
 }
 
 header {
@@ -57,26 +56,18 @@ header {
   color: #fff;
 }
 
-.logo h1:hover {
+.highlight,
+.logo h1:hover,
+.navigation-text-link:hover {
   color: #6c41ec;
 }
 
-.highlight {
-  color: #6c41ec;
-}
-
-.App {
+.app {
   height: 100%;
-  background-image: url('./background_photo_desktop.jpg');
+  background-image: url('./background_photo.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   font-family: 'Work Sans', sans-serif;
   font-weight: 500;
   color: #fff;
-}
-
-.App-playlist {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
 }
