--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,8 +1,17 @@
 .greeting-container {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 
+.greeting-main {
+  display: flex;
+  justify-content: center;
+}
+
 .greeting-container h1 {
+  display: flex;
+  justify-content: center;
   font-size: 5.2rem;
   margin: 1rem 0 1.2rem;
   cursor: pointer;
@@ -17,19 +26,23 @@
   font-weight: 600;
 }
 
+.hidden-container {
+  position: relative;
+}
+
 .text-container {
   background-color: rgba(1, 12, 63, .7);
-  width: 40%;
-  margin: auto;
-  padding: .9rem;
-  border-radius: .8rem;
+  box-shadow: 0 2.2px 1.2px 1.2px #000;
+  width: fit-content;
+  padding: 1px 26px 18px;
+  border-radius: 22px;
 }
 
 .scissors {
   font-size: 5rem;
-  position: relative;
-  left: 12rem;
-  bottom: 1.8rem
+  position: absolute;
+  left: 400px;
+  top: 176px;
 }
 
 .click-arrow {
@@ -39,6 +52,29 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: absolute;
-  bottom: 26.8rem;
-  left: 54.4rem;
+  left: 100%;
+  bottom: 70%;
+}
+
+.greeting-header-container {
+  position: relative;
+}
+
+@media screen and (min-height: 1079px) {
+  .greeting-main {
+    margin: 5% 0 1.2rem;
+  }
+
+  .greeting-container h1 {
+    font-size: 7.2rem;
+  }
+
+  .hidden-container {
+    margin: 0 auto;
+  }
+  
+  .click-arrow {
+    width: 82px;
+    height: 82px;
+  }
 }
