--- a/src/Pages/SignIn/SignIn.css
+++ b/src/Pages/SignIn/SignIn.css
@@ -1,7 +1,9 @@
 .signin-container {
-  margin: 4rem auto;
-  height: 42%;
-  width: 29%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  height: 348px;
+  width: 420px;
   background-color: rgba(1, 12, 63, .7);
   box-shadow: 0 2.2px 1.2px 0 #000;
   border-radius: 10px;
@@ -10,9 +12,14 @@
   font-size: 1.12rem;
 }
 
+.signin-main {
+  display: flex;
+  justify-content: center;
+}
+
 .login-container {
-  height: 36%;
-  width: 25%;
+  height: 298px;
+  width: 350px;
 }
 
 .login-container h1,
@@ -39,8 +46,6 @@ form {
 form input {
   padding: 2px 10px;
   border-radius: 8px;
-  /* float: right; */
-  /* display: inline-block; */
   width: 12rem;
   height: 1.6rem;
   border: 0;
@@ -58,15 +63,13 @@ form input {
 }
 
 .submit-button {
-  margin: .6rem 0 0 14.2rem;
+  margin: .6rem 0 0 15.2rem;
   font-family: 'Poppins', sans-serif;
-  font-size: 1.12rem;
   font-weight: 600;
   color: #fff;
   background-color: rgba(108, 65, 233, .7);
   border: none;
   cursor: pointer;
-  width: 8.11rem;
   padding: .77rem 0;
   border-radius: 54px;
   text-align: center;
@@ -86,5 +89,4 @@ form input {
   position: relative;
   top: 6rem;
   left: 12rem;
-  /* margin-left: 12.5rem; */
 }
