--- a/src/Pages/Details/Details.css
+++ b/src/Pages/Details/Details.css
@@ -1,9 +1,11 @@
 img {
   height: 420px;
   max-width: 440px;
+  object-fit: cover;
 }
 
 .details-main {
+  margin-top: 10%;
   display: flex;
   justify-content: center;
 }
