--- a/src/Pages/Details/Details.css
+++ b/src/Pages/Details/Details.css
@@ -1,7 +1,11 @@
 img {
+  object-fit: cover;
+}
+
+.details-container img {
   height: 420px;
   max-width: 440px;
-  object-fit: cover;
+  min-width: 440px;
 }
 
 .details-main {
@@ -22,7 +26,7 @@ img {
 
 .details-container ul {
   list-style: none;
-  max-height: 11.5rem;
+  max-height: 11.68rem;
   overflow-y: scroll;
 }
 
