--- a/src/Pages/SignIn/SignIn.css
+++ b/src/Pages/SignIn/SignIn.css
@@ -32,7 +32,7 @@
   justify-content: space-between;
 }
 
-label {   
+label {
   font-size: 1rem;
   padding-top: .38rem;
 }
@@ -54,8 +54,11 @@ form input {
   font-family: 'Poppins', sans-serif;
   font-size: 1rem;
   color: rgb(140, 120, 220);
-
   margin-bottom: 1rem;
+}
+
+form input:focus {
+  background: rgba(1, 12, 63, .7);
 }
 
 .submit-button input:focus {
@@ -89,4 +92,35 @@ form input {
   position: relative;
   top: 6rem;
   left: 12rem;
+}
+
+
+
+
+.signin-container {
+  position: relative;
+}
+
+.form-checkbox {
+  position: absolute;
+  bottom: 34px;
+  display: flex;
+}
+
+.form-checkbox,
+.form-checkbox label {
+  font-size: .8rem;
+  color: rgba(256, 256, 256, .8);
+}
+
+.form-checkbox span {
+  color: rgba(256, 256, 256, .5);
+  font-size: 1.2rem;
+  font-style: italic;
+  width: fit-content;
+}
+
+.form-checkbox input {
+  max-width: 14px;
+  margin: 0 8px;
 }
