--- a/src/Pages/Details/Details.css
+++ b/src/Pages/Details/Details.css
@@ -54,3 +54,53 @@ img {
   font-size: 2.2rem;
   padding: .2rem .8rem;
 }
+
+@media all and (max-width: 800px) {
+  .details-container img {
+    height: 280px;
+    max-width: 280px;
+    min-width: 280px;
+  }
+
+  .details-main {
+    display: flex;
+    justify-content: center;
+  }
+
+  .details-container {
+    width: 280px;
+    min-width: 280px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 0 0 15px 15px;
+  }
+
+  .details-container ul {
+    max-height: 6.68rem;
+    padding: 0 0 0 2rem;
+  }
+
+  .details-info {
+    width: 280px;
+    min-width: 280px;
+  }
+
+  .details-container h2 {
+    margin: .8rem 0 0 1.9rem;
+    max-height: 6.5rem;
+    font-size: 1.8rem;
+  }
+}
+
+@media all and (max-width: 340px) {
+  .details-container img {
+    height: 250px;
+    max-width: 250px;
+    min-width: 250px;
+  }
+
+  .details-container {
+    width: 250px;
+    min-width: 250px;
+  }
+}
